--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -4,7 +4,7 @@
   --text-body: #969cb3;
   --background: #f0f2f5;
   --shape: #ffffff;
-  --theme: #CE00AD;
+  --theme: #977600;
 }
 
 * {
@@ -65,4 +65,8 @@ button {
 [disabled] {
   opacity: 0.6;
   cursor: not-allowed;
+}
+
+a{
+  text-decoration: none;
 }
