chore: css footer

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -2,9 +2,9 @@
   --background: #f0f2f5;
   --text-title: #0a2689;
   --text-body: #969cb3;
-  --background: #f0f2f5;
   --shape: #ffffff;
   --theme: #977600;
+  --footer: #fff7da;
 }
 
 * {
